230224 Abe opened up all json files containing unharmful dialogues and parsed them into the csv form containing one sentence at one line

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ videos/
 audios_converted/
 videos_converted/
 videos_trimmed/
+final_data/
+NIKL_DIALOGUE_2020_v1.3/
 *.csv
 
 ## Test File For Experiments
