230330 Abe Repeate all process from the beginning, and fix some issues. 08, 09 files order were inversed, and 03 file's dest filename was wrong, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,16 @@ venv.bak/
 __pycache__/
 
 ## Resource Not Shared
-audios/
-videos/
-audios_converted/
-videos_converted/
-videos_trimmed/
+!audios/
+!videos/
+!audios_converted/
+!videos_converted/
+!videos_trimmed/
+audios/*
+videos/*
+audios_converted/*
+videos_converted/*
+videos_trimmed/*
 !final_data/
 final_data/*
 NIKL_DIALOGUE_2020_v1.3/
